@@ -1,3 +1,7 @@
+owncloud-news (1.403)
+* Respect encoding in feed enhancers
+* Hotfix for update on posgresql databases
+
 owncloud-news (1.402)
 * Add possibility of adding more than one xpath for article enhancer
 * Fix bug that wouldn't delete old read articles
